# svgeezer

./: CMakeLists.txt  README.md  conan.cmake  conanfile.py
app/: CMakeLists.txt  svgeezer_main.cpp
cmake/: conan.cmake
data/: points.txt
src/: CMakeLists.txt  simple_svg_1.0.0.hpp  svgeezy.cpp  svgeezy.h  tinker.cpp
